# FileOptics

./: .editorconfig  .gitignore  Cargo.toml  FileOptics.sln  README.md  azure-pipelines.yml  fo.cmd  utf_8_bom.txt
.github/workflows/: ci.yml  pr.yml
FileOptics/: Cli.cs  FileOptics.csproj  HexWriter.cs  Program.cs
FileOptics/Properties/: launchSettings.json
examples/: ascii.rs  enc.rs  shift.rs
files/: utf_16_be.txt  utf_16_le.txt  utf_8.txt  utf_8_bom.txt  windows_1252.txt
src/: ascii.rs  lib.rs  main.rs  show.rs
