[package]
name = "file_optics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "fo"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.91"
clap = { version = "4.4.1", features = ["derive"] }
colored = "2.0.4"
